# er-recommder-system

./: .env  .env.example  CODEOWNERS  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.test  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  test.db
backend/app/: __init__.py  main.py  scheduler.py
backend/app/api/: dashboard.py  feedback.py  forecasts.py  geocode.py  health.py  hospitals.py  recommend.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: __init__.py  alembic.ini  models.py  session.py
backend/app/db/migrations/: __init__.py  env.py
backend/app/db/migrations/versions/: 07aa4b06ca86_add_performances_indexes.py  22dc55fec28c_initial_schema.py  4ba70d58d1e3_placeholder_for_missing_migration.py  62b13d92d07f_add_unique_constraint_to_er_snapshots.py  89a568e54248_rename_published_at_to_updated_at.py  b421960f39bb_review_feedback_table.py  b958fbe70a08_add_unique_constraint_to_forecasts.py  (+7 more)
backend/app/forecasting/: __init__.py  arima.py  features.py  risk.py
backend/app/ingestion/: __init__.py  csv_loader.py  enrichment.py  fetcher.py  hospital_coord_loader.py  hospital_loader.py  main.py  parser.py  scheduler.py  snapshot_loader.py  utils.py
backend/app/jobs/: evaluate.py  forecasting.py  ingestion.py
backend/app/ml/: error_analysis.py  evaluate_forecasts.py  risk.py  run_forecasting.py  train_forecast.py
backend/app/ml/datasets/: snapshot_dataset.py
backend/app/ml/features/: feature_builder.py  pressure.py
backend/app/regions/: __init__.py  longueuil.py  registry.py
backend/app/schemas/: __init__.py  feedback.py  hospital.py  recommendation.py  region.py
backend/app/services/: forecast_service.py  forecast_storage.py  geocoding.py  routing.py  scoring.py  wait_time.py
backend/app/utils/: __init__.py  math.py  time.py
backend/tests/: __init__.py  conftest.py  test_forecasting.py  test_ingestion.py  test_recommend.py
backend/tests/test_api/: test_dashboard.py
backend/tests/test_db/: test_models.py
backend/tests/test_ml/: test_forecast_service.py  test_pressure.py
backend/tests/test_scheduler/: test_jobs.py
(+18 files in other folders)
